--- a/src/_locales/langcode/messages.json
+++ b/src/_locales/langcode/messages.json
@@ -1,692 +1,416 @@
 {
   "af": {
-    "en": "Afrikaans",
-    "zh_CN": "南非荷兰语",
-    "zh_TW": "南非荷蘭語"
+    "zh_CN": "南非荷兰语"
   },
   "am": {
-    "en": "Amharic",
-    "zh_CN": "阿姆哈拉语",
-    "zh_TW": "阿姆哈拉語"
+    "zh_CN": "阿姆哈拉语"
   },
   "ar": {
-    "en": "Arabic",
-    "zh_CN": "阿拉伯语",
-    "zh_TW": "阿拉伯語"
+    "zh_CN": "阿拉伯语"
   },
   "ara": {
-    "en": "Arabic",
-    "zh_CN": "阿拉伯语",
-    "zh_TW": "阿拉伯語"
+    "zh_CN": "阿拉伯语"
   },
   "az": {
-    "en": "Azeerbaijani",
-    "zh_CN": "阿塞拜疆语",
-    "zh_TW": "亞塞拜然語"
+    "zh_CN": "阿塞拜疆语"
   },
   "be": {
-    "en": "Belarusian",
-    "zh_CN": "白俄罗斯语",
-    "zh_TW": "白俄羅斯語"
+    "zh_CN": "白俄罗斯语"
   },
   "bg": {
-    "en": "Bulgarian",
-    "zh_CN": "保加利亚语",
-    "zh_TW": "保加利亞語"
+    "zh_CN": "保加利亚语"
   },
   "bn": {
-    "en": "Bengali",
-    "zh_CN": "孟加拉语",
-    "zh_TW": "孟加拉語"
+    "zh_CN": "孟加拉语"
   },
   "bs": {
-    "en": "Bosnian",
-    "zh_CN": "波斯尼亚语",
-    "zh_TW": "波斯尼亞語"
+    "zh_CN": "波斯尼亚语"
   },
   "bs-Latn": {
-    "en": "Bosnian",
-    "zh_CN": "波斯尼亚语",
-    "zh_TW": "波斯尼亞語"
+    "zh_CN": "波斯尼亚语"
   },
   "bul": {
-    "en": "Bulgarian",
-    "zh_CN": "保加利亚语",
-    "zh_TW": "保加利亞語"
+    "zh_CN": "保加利亚语"
   },
   "ca": {
-    "en": "Catalan",
-    "zh_CN": "加泰罗尼亚语",
-    "zh_TW": "加泰隆尼亞語"
+    "zh_CN": "加泰罗尼亚语"
   },
   "ceb": {
-    "en": "Cebuano",
-    "zh_CN": "宿务语",
-    "zh_TW": "宿霧語"
+    "zh_CN": "宿务语"
   },
   "cht": {
-    "en": "Chinese (Traditional)",
-    "zh_CN": "中文（繁体）",
-    "zh_TW": "中文（繁體）"
+    "zh_CN": "中文（繁体）"
   },
   "co": {
-    "en": "Corsican",
-    "zh_CN": "科西嘉语",
-    "zh_TW": "科西嘉語"
+    "zh_CN": "科西嘉语"
   },
   "cs": {
-    "en": "Czech",
-    "zh_CN": "捷克语",
-    "zh_TW": "捷克語"
+    "zh_CN": "捷克语"
   },
   "cy": {
-    "en": "Welsh",
-    "zh_CN": "威尔士语",
-    "zh_TW": "威爾士語"
+    "zh_CN": "威尔士语"
   },
   "da": {
-    "en": "Danish",
-    "zh_CN": "丹麦语",
-    "zh_TW": "丹麥語"
+    "zh_CN": "丹麦语"
   },
   "dan": {
-    "en": "Danish",
-    "zh_CN": "丹麦语",
-    "zh_TW": "丹麥語"
+    "zh_CN": "丹麦语"
   },
   "de": {
-    "en": "German",
-    "zh_CN": "德语",
-    "zh_TW": "德語"
+    "zh_CN": "德语"
   },
   "el": {
-    "en": "Greek",
-    "zh_CN": "希腊语",
-    "zh_TW": "希臘語"
+    "zh_CN": "希腊语"
   },
   "en": {
-    "en": "English",
-    "zh_CN": "英语",
-    "zh_TW": "英語"
+    "zh_CN": "英语"
   },
   "eo": {
-    "en": "Esperanto",
-    "zh_CN": "世界语",
-    "zh_TW": "世界語"
+    "zh_CN": "世界语"
   },
   "es": {
-    "en": "Spanish",
-    "zh_CN": "西班牙语",
-    "zh_TW": "西班牙語"
+    "zh_CN": "西班牙语"
   },
   "est": {
-    "en": "Estonian",
-    "zh_CN": "爱沙尼亚语",
-    "zh_TW": "愛沙尼亞語"
+    "zh_CN": "爱沙尼亚语"
   },
   "et": {
-    "en": "Estonian",
-    "zh_CN": "爱沙尼亚语",
-    "zh_TW": "愛沙尼亞語"
+    "zh_CN": "爱沙尼亚语"
   },
   "eu": {
-    "en": "Basque",
-    "zh_CN": "巴斯克语",
-    "zh_TW": "巴斯克語"
+    "zh_CN": "巴斯克语"
   },
   "fa": {
-    "en": "Persian",
-    "zh_CN": "波斯语",
-    "zh_TW": "波斯語"
+    "zh_CN": "波斯语"
   },
   "fi": {
-    "en": "Finnish",
-    "zh_CN": "芬兰语",
-    "zh_TW": "芬蘭語"
+    "zh_CN": "芬兰语"
   },
   "fil": {
-    "en": "Filipino",
-    "zh_CN": "菲律宾语",
-    "zh_TW": "菲律賓語"
+    "zh_CN": "菲律宾语"
   },
   "fin": {
-    "en": "Finnish",
-    "zh_CN": "芬兰语",
-    "zh_TW": "芬蘭語"
+    "zh_CN": "芬兰语"
   },
   "fj": {
-    "en": "Fijian",
-    "zh_CN": "斐济语",
-    "zh_TW": "斐濟語"
+    "zh_CN": "斐济语"
   },
   "fr": {
-    "en": "French",
-    "zh_CN": "法语",
-    "zh_TW": "法語"
+    "zh_CN": "法语"
   },
   "fra": {
-    "en": "French",
-    "zh_CN": "法语",
-    "zh_TW": "法語"
+    "zh_CN": "法语"
   },
   "fy": {
-    "en": "Frisian",
-    "zh_CN": "弗里斯兰语",
-    "zh_TW": "弗里斯蘭語"
+    "zh_CN": "弗里斯兰语"
   },
   "ga": {
-    "en": "Irish",
-    "zh_CN": "爱尔兰语",
-    "zh_TW": "愛爾蘭語"
+    "zh_CN": "爱尔兰语"
   },
   "gd": {
-    "en": "Scots Gaelic",
-    "zh_CN": "苏格兰盖尔语",
-    "zh_TW": "蘇格蘭蓋爾語"
+    "zh_CN": "苏格兰盖尔语"
   },
   "gl": {
-    "en": "Galician",
-    "zh_CN": "加利西亚语",
-    "zh_TW": "加利西亞語"
+    "zh_CN": "加利西亚语"
   },
   "gu": {
-    "en": "Gujarati",
-    "zh_CN": "古吉拉特语",
-    "zh_TW": "古吉拉特語"
+    "zh_CN": "古吉拉特语"
   },
   "ha": {
-    "en": "Hausa",
-    "zh_CN": "豪萨语",
-    "zh_TW": "豪薩語"
+    "zh_CN": "豪萨语"
   },
   "haw": {
-    "en": "Hawaiian",
-    "zh_CN": "夏威夷语",
-    "zh_TW": "夏威夷語"
+    "zh_CN": "夏威夷语"
   },
   "he": {
-    "en": "Hebrew",
-    "zh_CN": "希伯来语",
-    "zh_TW": "希伯來語"
+    "zh_CN": "希伯来语"
   },
   "hi": {
-    "en": "Hindi",
-    "zh_CN": "印地语",
-    "zh_TW": "印地語"
+    "zh_CN": "印地语"
   },
   "hmn": {
-    "en": "Hmong",
-    "zh_CN": "苗语",
-    "zh_TW": "苗語"
+    "zh_CN": "苗语"
   },
   "hr": {
-    "en": "Croatian",
-    "zh_CN": "克罗地亚语",
-    "zh_TW": "克羅埃西亞語"
+    "zh_CN": "克罗地亚语"
   },
   "ht": {
-    "en": "Haitian Creole",
-    "zh_CN": "海地克里奥尔语",
-    "zh_TW": "海地克里奧爾語"
+    "zh_CN": "海地克里奥尔语"
   },
   "hu": {
-    "en": "Hungarian",
-    "zh_CN": "匈牙利语",
-    "zh_TW": "匈牙利語"
+    "zh_CN": "匈牙利语"
   },
   "hy": {
-    "en": "Armenian",
-    "zh_CN": "亚美尼亚语",
-    "zh_TW": "亞美尼亞語"
+    "zh_CN": "亚美尼亚语"
   },
   "id": {
-    "en": "Indonesian",
-    "zh_CN": "印度尼西亚语",
-    "zh_TW": "印度尼西亞語"
+    "zh_CN": "印度尼西亚语"
   },
   "ig": {
-    "en": "Igbo",
-    "zh_CN": "伊博语",
-    "zh_TW": "伊博語"
+    "zh_CN": "伊博语"
   },
   "is": {
-    "en": "Icelandic",
-    "zh_CN": "冰岛语",
-    "zh_TW": "冰島語"
+    "zh_CN": "冰岛语"
   },
   "it": {
-    "en": "Italian",
-    "zh_CN": "意大利语",
-    "zh_TW": "義大利語"
+    "zh_CN": "意大利语"
   },
   "iw": {
-    "en": "Hebrew",
-    "zh_CN": "希伯来语",
-    "zh_TW": "希伯來語"
+    "zh_CN": "希伯来语"
   },
   "ja": {
-    "en": "Japanese",
-    "zh_CN": "日语",
-    "zh_TW": "日語"
+    "zh_CN": "日语"
   },
   "jp": {
-    "en": "Japanese",
-    "zh_CN": "日语",
-    "zh_TW": "日語"
+    "zh_CN": "日语"
   },
   "jw": {
-    "en": "Javanese",
-    "zh_CN": "爪哇语",
-    "zh_TW": "爪哇語"
+    "zh_CN": "爪哇语"
   },
   "ka": {
-    "en": "Georgian",
-    "zh_CN": "格鲁吉亚语",
-    "zh_TW": "喬治亞語"
+    "zh_CN": "格鲁吉亚语"
   },
   "kk": {
-    "en": "Kazakh",
-    "zh_CN": "哈萨克语",
-    "zh_TW": "哈薩克語"
+    "zh_CN": "哈萨克语"
   },
   "km": {
-    "en": "Khmer",
-    "zh_CN": "高棉语",
-    "zh_TW": "高棉語"
+    "zh_CN": "高棉语"
   },
   "kn": {
-    "en": "Kannada",
-    "zh_CN": "卡纳达语",
-    "zh_TW": "康納達語"
+    "zh_CN": "卡纳达语"
   },
   "ko": {
-    "en": "Korean",
-    "zh_CN": "韩语",
-    "zh_TW": "韓語"
+    "zh_CN": "韩语"
   },
   "kor": {
-    "en": "Korean",
-    "zh_CN": "韩语",
-    "zh_TW": "韓語"
+    "zh_CN": "韩语"
   },
   "kr": {
-    "en": "Korean",
-    "zh_CN": "韩语",
-    "zh_TW": "韓語"
+    "zh_CN": "韩语"
   },
   "ku": {
-    "en": "Kurdish",
-    "zh_CN": "库尔德语",
-    "zh_TW": "庫德語"
+    "zh_CN": "库尔德语"
   },
   "ky": {
-    "en": "Kyrgyz",
-    "zh_CN": "吉尔吉斯语",
-    "zh_TW": "柯爾克孜語"
+    "zh_CN": "吉尔吉斯语"
   },
   "la": {
-    "en": "Latin",
-    "zh_CN": "拉丁语",
-    "zh_TW": "拉丁語"
+    "zh_CN": "拉丁语"
   },
   "lb": {
-    "en": "Luxembourgish",
-    "zh_CN": "卢森堡语",
-    "zh_TW": "盧森堡語"
+    "zh_CN": "卢森堡语"
   },
   "lo": {
-    "en": "Lao",
-    "zh_CN": "老挝语",
-    "zh_TW": "寮語"
+    "zh_CN": "老挝语"
   },
   "lt": {
-    "en": "Lithuanian",
-    "zh_CN": "立陶宛语",
-    "zh_TW": "立陶宛語"
+    "zh_CN": "立陶宛语"
   },
   "lv": {
-    "en": "Latvian",
-    "zh_CN": "拉脱维亚语",
-    "zh_TW": "拉脫維亞語"
+    "zh_CN": "拉脱维亚语"
   },
   "mg": {
-    "en": "Malagasy",
-    "zh_CN": "马尔加什语",
-    "zh_TW": "馬拉加斯語"
+    "zh_CN": "马尔加什语"
   },
   "mi": {
-    "en": "Maori",
-    "zh_CN": "毛利语",
-    "zh_TW": "毛利語"
+    "zh_CN": "毛利语"
   },
   "mk": {
-    "en": "Macedonian",
-    "zh_CN": "马其顿语",
-    "zh_TW": "馬其頓語"
+    "zh_CN": "马其顿语"
   },
   "ml": {
-    "en": "Malayalam",
-    "zh_CN": "马拉雅拉姆语",
-    "zh_TW": "馬拉雅拉姆語"
+    "zh_CN": "马拉雅拉姆语"
   },
   "mn": {
-    "en": "Mongolian",
-    "zh_CN": "蒙古语",
-    "zh_TW": "蒙古語"
+    "zh_CN": "蒙古语"
   },
   "mr": {
-    "en": "Marathi",
-    "zh_CN": "马拉地语",
-    "zh_TW": "馬拉地語"
+    "zh_CN": "马拉地语"
   },
   "ms": {
-    "en": "Malay",
-    "zh_CN": "马来语",
-    "zh_TW": "馬來語"
+    "zh_CN": "马来语"
   },
   "mt": {
-    "en": "Maltese",
-    "zh_CN": "马耳他语",
-    "zh_TW": "馬爾他語"
+    "zh_CN": "马耳他语"
   },
   "mww": {
-    "en": "Bai Miao Wen",
-    "zh_CN": "白苗文",
-    "zh_TW": "白苗文"
+    "zh_CN": "白苗文"
   },
   "my": {
-    "en": "Myanmar (Burmese)",
-    "zh_CN": "缅甸语",
-    "zh_TW": "緬甸語"
+    "zh_CN": "缅甸语"
   },
   "ne": {
-    "en": "Nepali",
-    "zh_CN": "尼泊尔语",
-    "zh_TW": "尼泊爾語"
+    "zh_CN": "尼泊尔语"
   },
   "nl": {
-    "en": "Dutch",
-    "zh_CN": "荷兰语",
-    "zh_TW": "荷蘭語"
+    "zh_CN": "荷兰语"
   },
   "no": {
-    "en": "Norwegian",
-    "zh_CN": "挪威语",
-    "zh_TW": "挪威語"
+    "zh_CN": "挪威语"
   },
   "ny": {
-    "en": "Nyanja (Chichewa)",
-    "zh_CN": "尼杨扎语（齐切瓦语）",
-    "zh_TW": "尼揚賈語（齊切瓦語）"
+    "zh_CN": "尼杨扎语（齐切瓦语）"
   },
   "otq": {
-    "en": "Cretaro Ottomi",
-    "zh_CN": "克雷塔罗奥托米语",
-    "zh_TW": "克雷塔羅奧托米語"
+    "zh_CN": "克雷塔罗奥托米语"
   },
   "pa": {
-    "en": "Punjabi",
-    "zh_CN": "旁遮普语",
-    "zh_TW": "旁遮普語"
+    "zh_CN": "旁遮普语"
   },
   "pl": {
-    "en": "Polish",
-    "zh_CN": "波兰语",
-    "zh_TW": "波蘭語"
+    "zh_CN": "波兰语"
   },
   "ps": {
-    "en": "Pashto",
-    "zh_CN": "普什图语",
-    "zh_TW": "普什圖語"
+    "zh_CN": "普什图语"
   },
   "pt": {
-    "en": "Portuguese (Portugal, Brazil)",
-    "zh_CN": "葡萄牙语（葡萄牙、巴西）",
-    "zh_TW": "葡萄牙語（葡萄牙、巴西）"
+    "zh_CN": "葡萄牙语（葡萄牙、巴西）"
   },
   "pt_BR": {
-    "en": "Brazilian",
-    "zh_CN": "巴西语",
-    "zh_TW": "巴西語"
+    "zh_CN": "巴西语"
   },
   "ro": {
-    "en": "Romanian",
-    "zh_CN": "罗马尼亚语",
-    "zh_TW": "羅馬尼亞語"
+    "zh_CN": "罗马尼亚语"
   },
   "rom": {
-    "en": "Romanian",
-    "zh_CN": "罗马尼亚语",
-    "zh_TW": "羅馬尼亞語"
+    "zh_CN": "罗马尼亚语"
   },
   "ru": {
-    "en": "Russian",
-    "zh_CN": "俄语",
-    "zh_TW": "俄語"
+    "zh_CN": "俄语"
   },
   "sd": {
-    "en": "Sindhi",
-    "zh_CN": "信德语",
-    "zh_TW": "信德語"
+    "zh_CN": "信德语"
   },
   "si": {
-    "en": "Sinhala (Sinhalese)",
-    "zh_CN": "僧伽罗语",
-    "zh_TW": "僧伽羅語"
+    "zh_CN": "僧伽罗语"
   },
   "sk": {
-    "en": "Slovak",
-    "zh_CN": "斯洛伐克语",
-    "zh_TW": "斯洛伐克語"
+    "zh_CN": "斯洛伐克语"
   },
   "sl": {
-    "en": "Slovenian",
-    "zh_CN": "斯洛文尼亚语",
-    "zh_TW": "斯洛維尼亞語"
+    "zh_CN": "斯洛文尼亚语"
   },
   "slo": {
-    "en": "Slovenian",
-    "zh_CN": "斯洛文尼亚语",
-    "zh_TW": "斯洛維尼亞語"
+    "zh_CN": "斯洛文尼亚语"
   },
   "sm": {
-    "en": "Samoan",
-    "zh_CN": "萨摩亚语",
-    "zh_TW": "薩摩亞語"
+    "zh_CN": "萨摩亚语"
   },
   "sn": {
-    "en": "Shona",
-    "zh_CN": "修纳语",
-    "zh_TW": "修納語"
+    "zh_CN": "修纳语"
   },
   "so": {
-    "en": "Somali",
-    "zh_CN": "索马里语",
-    "zh_TW": "索馬利亞語"
+    "zh_CN": "索马里语"
   },
   "spa": {
-    "en": "Spanish",
-    "zh_CN": "西班牙语",
-    "zh_TW": "西班牙語"
+    "zh_CN": "西班牙语"
   },
   "sq": {
-    "en": "Albanian",
-    "zh_CN": "阿尔巴尼亚语",
-    "zh_TW": "阿爾巴尼亞語"
+    "zh_CN": "阿尔巴尼亚语"
   },
   "sr": {
-    "en": "Serbian",
-    "zh_CN": "塞尔维亚语",
-    "zh_TW": "塞爾維亞語"
+    "zh_CN": "塞尔维亚语"
   },
   "sr-Cyrl": {
-    "en": "Serbian (Cyrillic)",
-    "zh_CN": "塞尔维亚语(西里尔文)",
-    "zh_TW": "塞爾維亞語(西里爾文)"
+    "zh_CN": "塞尔维亚语(西里尔文)"
   },
   "sr-Latn": {
-    "en": "Serbian (Latin)",
-    "zh_CN": "塞尔维亚语(拉丁文)",
-    "zh_TW": "塞爾維亞語(拉丁文)"
+    "zh_CN": "塞尔维亚语(拉丁文)"
   },
   "st": {
-    "en": "Sesotho",
-    "zh_CN": "塞索托语",
-    "zh_TW": "塞索托語"
+    "zh_CN": "塞索托语"
   },
   "su": {
-    "en": "Sundanese",
-    "zh_CN": "巽他语",
-    "zh_TW": "巽他語"
+    "zh_CN": "巽他语"
   },
   "sv": {
-    "en": "Swedish",
-    "zh_CN": "瑞典语",
-    "zh_TW": "瑞典語"
+    "zh_CN": "瑞典语"
   },
   "sw": {
-    "en": "Swahili",
-    "zh_CN": "斯瓦希里语",
-    "zh_TW": "斯瓦希里語"
+    "zh_CN": "斯瓦希里语"
   },
   "swe": {
-    "en": "Swedish",
-    "zh_CN": "瑞典语",
-    "zh_TW": "瑞典語"
+    "zh_CN": "瑞典语"
   },
   "ta": {
-    "en": "Tamil",
-    "zh_CN": "泰米尔语",
-    "zh_TW": "泰米爾語"
+    "zh_CN": "泰米尔语"
   },
   "te": {
-    "en": "Telugu",
-    "zh_CN": "泰卢固语",
-    "zh_TW": "泰盧固語"
+    "zh_CN": "泰卢固语"
   },
   "tg": {
-    "en": "Tajik",
-    "zh_CN": "塔吉克语",
-    "zh_TW": "塔吉克語"
+    "zh_CN": "塔吉克语"
   },
   "th": {
-    "en": "Thai",
-    "zh_CN": "泰语",
-    "zh_TW": "泰語"
+    "zh_CN": "泰语"
   },
   "tl": {
-    "en": "Tagalog (Filipino)",
-    "zh_CN": "塔加路语（菲律宾语）",
-    "zh_TW": "他加祿語（菲律賓語）"
+    "zh_CN": "塔加路语（菲律宾语）"
   },
   "tlh": {
-    "en": "Klingon",
-    "zh_CN": "克林贡语",
-    "zh_TW": "克林貢語"
+    "zh_CN": "克林贡语"
   },
   "tlh-Qaak": {
-    "en": "Klingon (piqaD)",
-    "zh_CN": "克林贡语(piqaD)",
-    "zh_TW": "克林貢語(piqaD)"
+    "zh_CN": "克林贡语(piqaD)"
   },
   "to": {
-    "en": "Tongan",
-    "zh_CN": "汤加语",
-    "zh_TW": "湯加語"
+    "zh_CN": "汤加语"
   },
   "tr": {
-    "en": "Turkish",
-    "zh_CN": "土耳其语",
-    "zh_TW": "土耳其語"
+    "zh_CN": "土耳其语"
   },
   "ty": {
-    "en": "Tahiti",
-    "zh_CN": "塔希提语",
-    "zh_TW": "大溪地語"
+    "zh_CN": "塔希提语"
   },
   "uk": {
-    "en": "Ukrainian",
-    "zh_CN": "乌克兰语",
-    "zh_TW": "烏克蘭語"
+    "zh_CN": "乌克兰语"
   },
   "ur": {
-    "en": "Urdu",
-    "zh_CN": "乌尔都语",
-    "zh_TW": "烏爾都語"
+    "zh_CN": "乌尔都语"
   },
   "uz": {
-    "en": "Uzbek",
-    "zh_CN": "乌兹别克语",
-    "zh_TW": "烏茲別克語"
+    "zh_CN": "乌兹别克语"
   },
   "vi": {
-    "en": "Vietnamese",
-    "zh_CN": "越南语",
-    "zh_TW": "越南語"
+    "zh_CN": "越南语"
   },
   "vie": {
-    "en": "Vietnamese",
-    "zh_CN": "越南语",
-    "zh_TW": "越南語"
+    "zh_CN": "越南语"
   },
   "wyw": {
-    "en": "Classical Chinese",
-    "zh_CN": "文言文",
-    "zh_TW": "文言文"
+    "zh_CN": "文言文"
   },
   "xh": {
-    "en": "Xhosa",
-    "zh_CN": "班图语",
-    "zh_TW": "班圖語"
+    "zh_CN": "班图语"
   },
   "yi": {
-    "en": "Yiddish",
-    "zh_CN": "意第绪语",
-    "zh_TW": "意第緒語"
+    "zh_CN": "意第绪语"
   },
   "yo": {
-    "en": "Yoruba",
-    "zh_CN": "约鲁巴语",
-    "zh_TW": "約魯巴語"
+    "zh_CN": "约鲁巴语"
   },
   "yua": {
-    "en": "Yucatan Mayan",
-    "zh_CN": "尤卡坦玛雅语",
-    "zh_TW": "猶加敦馬雅語"
+    "zh_CN": "尤卡坦玛雅语"
   },
   "yue": {
-    "en": "Cantonese (Traditional)",
-    "zh_CN": "粤语（繁体）",
-    "zh_TW": "粵語（繁體）"
+    "zh_CN": "粤语（繁体）"
   },
   "zh": {
-    "en": "Chinese (Simplified)",
-    "zh_CN": "中文（简体）",
-    "zh_TW": "中文（簡體）"
+    "zh_CN": "中文（简体）"
   },
   "zh-CHS": {
-    "en": "Chinese (Simplified)",
-    "zh_CN": "中文（简体）",
-    "zh_TW": "中文（簡體）"
+    "zh_CN": "中文（简体）"
   },
   "zh-CHT": {
-    "en": "Chinese (Traditional)",
-    "zh_CN": "中文（繁体）",
-    "zh_TW": "中文（繁體）"
+    "zh_CN": "中文（繁体）"
   },
   "zh-CN": {
-    "en": "Chinese (Simplified)",
-    "zh_CN": "中文（简体）",
-    "zh_TW": "中文（簡體）"
+    "zh_CN": "中文（简体）"
   },
   "zh-TW": {
-    "en": "Chinese (Traditional)",
-    "zh_CN": "中文（繁体）",
-    "zh_TW": "中文（繁體）"
+    "zh_CN": "中文（繁体）"
   },
   "zu": {
-    "en": "Zulu",
-    "zh_CN": "祖鲁语",
-    "zh_TW": "祖魯語"
+    "zh_CN": "祖鲁语"
   }
 }
