--- a/src/_locales/options/messages.json
+++ b/src/_locales/options/messages.json
@@ -74,8 +74,8 @@
   "head_info_donate": {
     "zh_CN": "随喜捐赠"
   },
-  "head_info_instructions": {
-    "zh_CN": "使用说明"
+  "About_Info": {
+    "zh_CN": "说明"
   },
   "head_info_report_issue": {
     "zh_CN": "反馈问题"
